--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dev": "node dist/index"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "express": "^4.18.2",
     "rich-domain": "^1.17.1",
     "ts-logs": "^0.0.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
