--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "build": "tsc",
     "predev": "tsc",
-    "dev": "node dist/index"
+    "dev": "env-cmd node dist/index"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.264.0",
     "axios": "^1.3.2",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "rich-domain": "^1.17.1",
-    "ts-logs": "^0.0.7"
+    "ts-logs": "^0.0.9"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
